--- a/css/index.css
+++ b/css/index.css
@@ -75,7 +75,7 @@ body {
     width: 50%;
 }
 .portfolio__title{
-    font-size: clamp(25px, 4vw, 35px);
+    font-size: clamp(22px, 4vw, 35px);
     user-select: none;
 }
 .portfolio__description{
@@ -93,6 +93,31 @@ body {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     color: transparent;
+    position: relative;
+}
+.tag-frontend::after{
+    content: "";
+    position: absolute;
+    width: 50%;
+    height: 5px;
+    background: rgba(30, 133, 255,0.9);
+    z-index: -1;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50% ,-50%);
+    filter: blur(18px);
+}
+.tag-frontend::before{
+    content: "";
+    position: absolute;
+    width: 50%;
+    height: 5px;
+    background: rgba(175, 46, 255,0.9);
+    z-index: -1;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50% ,-50%);
+    filter: blur(18px);
 }
 .header__title__technology{
     font-size: 16px;
