--- a/css/reset.css
+++ b/css/reset.css
@@ -94,8 +94,10 @@ ul{
 .flex{display: flex;}
 .block{display: block;}
 .align-center{align-items: center;}
-.align-start{align-items: center;}
+.align-start{align-items: start;}
+.align-end{align-items: end;}
 .justify-start{justify-content: end;}
+.justify-center{justify-content: center;}
 .justify-end{justify-content: end;}
 .flex-wrap{flex-wrap: wrap;}
 
@@ -165,6 +167,7 @@ ul{
 .w-medium{font-weight: 500;}
 .w-semi-bold{font-weight: 600;}
 .w-bold{font-weight: 700;}
+
 .fz-15{font-size: 15px;}
 .fz-14{font-size: 14px;}
 .fz-13{font-size: 13px;}
