--- a/css/index.css
+++ b/css/index.css
@@ -150,29 +150,43 @@ body {background: #E1E5EE;}
     max-width: 750px;
 }
 .cardProyects{
+    display: grid;
     max-width: 1440px;
-    gap: 91px;
+    width: 100%;
+    gap: 24px;
+    grid-template-columns: repeat(auto-fit,minmax(300px, 386px));
+    place-content: center;
 }
 .card-title{
-    top: -20px;
-    right: 0;
+    padding: 0.75rem;
+    font-size: 24px;
+    font-family: "Bebas Neue", serif;
+
 }
 .card{
-    width: 260px;
-    height: 420px;
+    /* width: 260px;
+    height: 420px; */
+    display: flex;
     color: #151A44;
+    background: white;
     user-select: none;
-    filter: drop-shadow(-25px 25px 13px rgba(71,90,146,25%));
-    -webkit-filter: drop-shadow(-25px 25px 13px rgba(71,90,146,25%));
-    -moz-filter: drop-shadow(-25px 25px 13px rgba(71,90,146,25%));
-    -ms-filter: drop-shadow(-25px 25px 13px rgba(71,90,146,25%));
-    -o-filter: drop-shadow(-25px 25px 13px rgba(71,90,146,25%));
+    box-shadow: 0px 80px 80px -50px rgba(71,90,146,25%);
+    flex-direction: column;
+    width: 100%;
+    border-radius: 6px;
+    overflow: hidden;
 }
 .card-img{
     width: 100%;
-    height: 420px;
     overflow: hidden;
 }
+.card-img > img{
+    object-position: top;
+    max-height: 337.69px;
+    height: 100%;
+    aspect-ratio: 1 / 1;
+}
+
 .card-title > h3{
     text-align: center;
     top: 50%;
@@ -182,24 +196,24 @@ body {background: #E1E5EE;}
 
 .card-links{
     width: 100%;
-    bottom: 0;
-    left: 0;
-    background: #ffffff;
-    box-shadow: 0px -10px 25px 0px rgba(71,90,146,25%);
+    display: flex;
+    padding: 0rem 0.75rem 0.75rem 0.75rem;
 }
 .visit_web{
     padding: 8px 1rem;
-    border-radius: 25px;
-    background: #1E85FF;
+    border-radius: 6px;
+    flex: 1;
+    background: #FFB23E;
     color: white;
 }
-.visit_web-code{background: #9747FF;}
+.visit_web-code{background: #1E85FF;}
 
 #tecnogolies{
-    top: 50%;
-    left: -14px;
-    transform: translate(-50% , -50%);
+    display: flex;    
+    padding: 0rem 0.75rem 0.75rem 0.75rem;
 }
+
+
 .icon-animation-show{
     opacity: 0;
     visibility: hidden;
@@ -210,16 +224,38 @@ body {background: #E1E5EE;}
     transition: 500ms cubic-bezier(0.16, 1, 0.3, 1);
     box-shadow: 0px 0px 15px -5px rgba(27, 30, 37, 0.3);
 }
+.icon-color-html > path{
+    fill : #FF8C5B;
+}
+.icon-color-css3 > path{
+    fill : #1E85FF;
+}
+
+.icon-color-javascript > path{
+    fill : #FFE816;
+}
+
+.icon-color-github > path{
+    fill : #151A44;
+}
+
+.icon-color-figma > path{
+    fill : #8C95FD;
+}
+.icon-color-php > path{
+    fill : #392fff;
+}
+
+
+
+
 .icon-animation-hover:hover > .icon-animation-show{
     opacity: 1;
     visibility: visible;
     transform: translateX(26px);
 }
 /* Diseño de card para design ux ui */
-.card-design{
-    max-width: 330px;
-    height: 260px;
-    overflow: hidden;
+.design{
     cursor: pointer;
 }
 .card-design > img{
@@ -249,6 +285,7 @@ body {background: #E1E5EE;}
 /* Proyectos modal referente al diseño */
 .proyecto-modal{
     top: 0;
+    left: 0;
     z-index: 4;
     background: rgba(0,0,0,85%);
     position: fixed;
@@ -438,3 +475,7 @@ body:has(.proyecto-modal){
 
 }
 
+/* OCULTAR */
+.hidden{
+    display: none;
+}
